dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@endpoint__tasks__tests__frame_dispatch__same_peer_frames_batched.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 TRACE m#task.priority_router.drained=0
0:00:00.000000000 TRACE m#task.frame_dispatch.drained=0
0:00:00.000000000 TRACE c#q.router_to_batcher.enq[p2]=5
0:00:00.000000000 TRACE g#q.router_to_batcher.depth[p2]=5
0:00:00.000000000 TRACE m#q.router_to_batcher.depth_dist[p2]=5
0:00:00.000000000 TRACE c#q.router_to_batcher.sender[p2.task.priority_router]=1
0:00:00.000000000 TRACE c#q.router_to_batcher.enq[p2]=1
0:00:00.000000000 TRACE g#q.router_to_batcher.depth[p2]=6
0:00:00.000000000 TRACE m#q.router_to_batcher.depth_dist[p2]=6
0:00:00.000000000 TRACE m#task.priority_router.drained=1
0:00:00.000000000 TRACE c#q.router_to_batcher.receiver[p2.task.frame_dispatch]=1
0:00:00.000000000 TRACE c#q.router_to_batcher.drain[p2]=1
0:00:00.000000000 TRACE g#q.router_to_batcher.depth[p2]=5
0:00:00.000000000 TRACE c#q.router_to_batcher.receiver[p2.task.frame_dispatch]=1
0:00:00.000000000 TRACE c#q.router_to_batcher.drain[p2]=1
0:00:00.000000000 TRACE g#q.router_to_batcher.depth[p2]=4
0:00:00.000000000 TRACE c#q.router_to_batcher.receiver[p2.task.frame_dispatch]=1
0:00:00.000000000 TRACE c#q.router_to_batcher.drain[p2]=1
0:00:00.000000000 TRACE g#q.router_to_batcher.depth[p2]=3
0:00:00.000000000 TRACE c#q.router_to_batcher.receiver[p2.task.frame_dispatch]=1
0:00:00.000000000 TRACE c#q.router_to_batcher.drain[p2]=1
0:00:00.000000000 TRACE g#q.router_to_batcher.depth[p2]=2
0:00:00.000000000 TRACE c#q.router_to_batcher.receiver[p2.task.frame_dispatch]=1
0:00:00.000000000 TRACE c#q.router_to_batcher.drain[p2]=1
0:00:00.000000000 TRACE g#q.router_to_batcher.depth[p2]=1
0:00:00.000000000 TRACE c#pick_two.chosen[send.0]=1
0:00:00.000000000 TRACE m#task.frame_dispatch.drained=6
